--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-netty.mediator-downstream-port = 8080
+netty.mediator-downstream-port=8080
 netty.boss-count = 1
 netty.worker-count = 2
+
+netty.end-server-port-1 = 8081
+netty.end-server-port-2 = 8082
+
+car.name=ferrari
